# interviewKit

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
companies/: _template.md  amazon.md  microsoft.md
examples/experiences/: _template.md
resources/: README.md
src/interviewkit/: __init__.py  __main__.py  cli.py  config.py
src/interviewkit/agent/: __init__.py  question_gen.py
src/interviewkit/ingest/: __init__.py  chunker.py  loader.py
src/interviewkit/ingest/embedder/: __init__.py  batching.py  client.py  models.py  openai_client.py
src/interviewkit/prompts/: interviewer.txt  question_gen.txt  star_synth.txt
src/interviewkit/providers/: __init__.py  base.py  claude.py  factory.py  openai.py
src/interviewkit/retrieval/: __init__.py  connection.py  models.py  records.py  retriever.py  schema.py  vectorstore.py
tests/: test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_loader.py  test_prompts.py  test_providers.py  test_question_gen_agent.py  test_retriever.py  test_vectorstore.py
