[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interviewkit"
version = "0.1.0"
description = "Local AI interview-prep CLI for company-specific behavioral practice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Vivek Shankar" }
]
keywords = ["interview-prep", "rag", "langchain", "langgraph", "pgvector", "cli"]
dependencies = [
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "tiktoken>=0.7.0",
  "typer>=0.12.0",
  "pydantic-settings>=2.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "black>=24.0.0",
]

[project.scripts]
interviewkit = "interviewkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/interviewkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
